--- a/src/LoginForm/LoginForm.css
+++ b/src/LoginForm/LoginForm.css
@@ -20,7 +20,6 @@ h2 {
 .loginForm-container {
   background-color: salmon;
   border: 6px solid salmon;
-  border-radius: 6px;
   padding: 120px 0px 120px 0px;
   margin-left: 10px;
   margin-right: 10px;
@@ -28,5 +27,18 @@ h2 {
 }
 
 input {
+    border-radius: 6px;
     border: 2px solid white;
+    font: inherit;
+    color: currentColor;
+    width: 100%;
+    border: 0;
+    height: 1.1876em;
+    margin: 0;
+    display: block;
+    padding: 6px 0 7px 6px;
+    min-width: 0;
+    box-sizing: content-box;
+    letter-spacing: inherit;
+    background-color: white;
 }
