--- a/src/LoginForm/LoginForm.css
+++ b/src/LoginForm/LoginForm.css
@@ -8,19 +8,19 @@ header {
   text-align: center;
   font-size: 30px;
   margin-top: 20px;
-  color: salmon;
+  color: #2C46C4;
   font-weight: 600;
 }
 
 h2 {
   text-align: center;
-  color: white;
+  color: #2C46C4;
 }
 
 .loginForm-container {
-  background-color: salmon;
-  border: 6px solid salmon;
-  padding: 120px 0px 120px 0px;
+  background-color: #FFED86;
+  border: 6px solid #FFED86;
+  padding: 50px 0px 50px 0px;
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 40px;
@@ -41,4 +41,19 @@ input {
     box-sizing: content-box;
     letter-spacing: inherit;
     background-color: white;
+}
+
+img {
+  width:20%;
+  margin-left: 38%;
+}
+
+.loginForm-button, .formControl-button {
+  margin-top: 50px;
+  width: 40%;
+  padding: 10px 22px;
+  margin-left: 30%;
+  color:#2C46C4;
+  font-weight: 600;
+  background-color: white;
 }
