--- a/src/frontend/App.css
+++ b/src/frontend/App.css
@@ -2,25 +2,11 @@ body {
   background-color: white;
 }
 
-header {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.15em; /* Adjust as needed */
-  animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
+.header {
+  color: #2C46C4;
+  font-size: 30px;
+  justify-content: center;
+  margin-left: 25%;
 }
 
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
 
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: blue; }
-  }
